Pantheon desktop fixes
* Fix invisible progressbar in file manager
* Fix dark text color in placeholders

--- a/gtk-3.0/apps/_pantheon.scss
+++ b/gtk-3.0/apps/_pantheon.scss
@@ -292,7 +292,7 @@ LibraryWindow {
   &.view {
     &.level-bar {
       &,&:selected,&:selected:focus{
-        background-color: transparentize(black, 0.86);
+        background: linear-gradient(to right, lighten($base_color, 15%), lighten($base_color, 15%));
         border: 1px solid transparentize(black, 0.86);
         box-shadow: 0 1px 0 transparentize(#fff, 0.75);
         border-radius: 2px;
@@ -304,7 +304,7 @@ LibraryWindow {
     &.fill-block{
       &,&:hover,&:selected,&:selected:focus{
         background-image: none;
-        background-color: $selected_bg_color;
+        background: linear-gradient(to right, $selected_bg_color, $selected_bg_color);
       }
     }
   }
